--- a/public/css/style.css
+++ b/public/css/style.css
@@ -238,19 +238,24 @@
 }*/
 
 .contact_form input, select, textarea {
-  /*background: #707C78;*/
+  /* Offset text within field */
+  padding-left: 10px;
+  padding-right: 10px;
+
+  font-family: 'Open Sans', sans-serif;
   font-size: 100%;
-  height: 24px;
-  font-weight: bold;
+  font-weight: 600;
 }
 
 .contact_form select {
-  height: 24px;
+  font-size: 100%;
   font-weight: normal;
+  font-family: 'Open Sans', sans-serif;
 }
 
 .contact_form textarea {
-  font-weight: normal;
+  font-weight: 600;
+  font-family: 'Open Sans', sans-serif;
 }
 
 /* Container to hold both the form input element and applicable error message */
@@ -265,22 +270,23 @@
 }
 
 .contact_form #phone_area {
-  width: 30px;
+  width: 40px;
   height: 38px;
 }
 
 .contact_form #phone_prefix {
-  width: 30px;
+  width: 40px;
   height: 38px;
 }
 
 .contact_form #phone_suffix {
-  width: 40px;
+  width: 50px;
   height: 38px;
 }
 
 .contact_form #phone_ext {
   width: 40px;
+
   /* Spacing in between the extension and phone suffix */
   margin-left: 10px;
 
@@ -298,7 +304,6 @@
 }
 
 .contact_form #contact_message {
-  /* Use the allocated size of the input container */
   width: 100%;
   height: 120px;
 }
@@ -431,7 +436,7 @@
 }
 
 .contact_form li {
-  /*font-family: 'Lora', serif;*/
+  font-family: 'Lora', serif;
   font-size: 90%;
 
   /* Spacing in between disclaimer and textarea */
@@ -514,6 +519,10 @@
   color: red;
   padding-left: 5px;
   /*border: 2px dashed red;*/
+}
+
+.sans {
+  font-family: 'Open Sans', sans-serif;
 }
 
 /* Experimental (breaks Mobile Safari select input fields) */
